--- a/index.html
+++ b/index.html
@@ -33,24 +33,24 @@
                 onAllow: function (rcc) {
                     console.log('GA consent allow:' + this.category);
 
-                    if (rcc.hasConsented(this.category)) {
-                        console.log('hasConsented ' + this.category + ': true');
-
-                        this.load();
-                        ga('create', this.id, 'auto');
-                        ga('set', 'anonymizeIp', this.anonymizeIp);
-                        ga('send', 'event', 'Cookie Consent', 'Accepted');
-                        ga('send', 'pageview');
-                    }
-                    else {
-                        console.log('hasConsented ' + this.category + ': false');
-                    }
+                    this.load();
+                    ga('create', this.id, 'auto');
+                    ga('set', 'anonymizeIp', this.anonymizeIp);
+                    ga('send', 'event', 'Cookie Consent', 'Accepted');
+                    ga('send', 'pageview');
                 },
-                onStatusChange: function (new_status, old_status) {
+                onRevoke: function (rcc) {
+                    console.log('GA consent revoke:' + this.category);
+
                     this.load();
 
                     ga('create', this.id, {'storage': 'none'});
                     ga('send', 'event', 'Cookie Consent', 'Declined');
+                },
+                onStatusChange: function (rcc, new_status, old_status) {
+                    console.log('GA consent status change');
+                    console.log(new_status);
+                    console.log(old_status);
                 }
             });
         });
@@ -71,20 +71,21 @@
                 },
                 onAllow: function (rcc) {
                     console.log('ADS consent allow:' + this.category);
-
-                    if (rcc.hasConsented(this.category)) {
-                        console.log('hasConsented ' + this.category + ': true');
-                    }
-                    else {
-                        console.log('hasConsented ' + this.category + ': false');
-                    }
+                },
+                onRevoke: function (rcc) {
+                    console.log('ADS consent revoke:' + this.category);
+                },
+                onStatusChange: function (rcc, new_status, old_status) {
+                    console.log('ADS consent status change');
+                    console.log(new_status);
+                    console.log(old_status);
                 }
             });
         });
     </script>
     <script>
         window.addEventListener("load", function() {
-            window.rcc.initialise({formId: 'consent_form', cookie: {name: 'consent'}});
+            window.rcc.initialise({formId: 'rcc_form', cookie: {name: 'consent'}});
         });
     </script>
 
@@ -118,35 +119,7 @@
                     <header class="card-divider">
                         <h4 class="page-header">Declarative Cookie Form</h4>
                     </header>
-                    <form id="consent_form" novalidate data-ng-init="main.$cookie=('consent' | getCookie);" data-ng-submit="main.isSubmit=true; main.$cookie=('consent' | getCookie);" name="cookieForm" class="card-section cookie-form" rc-cookie="consent" rc-cookie-fields="main.$cookieFields" rc-cookie-days="2">
-                        <div class="callout alert" data-ng-if="cookieForm.$invalid && main.isSubmit">
-                            <span>Check required fields</span>
-                            <button class="close-button" aria-label="Dismiss alert" type="button" data-ng-click="main.isSubmit=false;">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <p>{{main.$cookieFields | json}}</p>
-                        <div class="callout success" data-ng-if="cookieForm.$valid && main.isSubmit">
-                            <span>Submitted valid</span>
-                            <button class="close-button" aria-label="Dismiss alert" type="button" data-ng-click="main.isSubmit=false;">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <label>
-                            <input type="checkbox" data-ng-change="main.isSubmit=false;" data-ng-model="main.$cookieFields.analytics" class="cookie-field" placeholder="Search">
-                            Analytics
-                        </label>
-                        <label>
-                            <input type="checkbox" data-ng-change="main.isSubmit=false;" data-ng-model="main.$cookieFields.marketing" class="cookie-field">
-                            Marketing
-                        </label>
-
-                        <fieldset>
-                            <button type="submit" class="button primary">Accept</button>
-                            <button type="button" class="button alert" data-ng-click="main.isSubmit=false; main.$cookie=(null | setCookie:'consent');">Remove Cookie</button>
-                        </fieldset>
-                    </form>
-                    <form id="consent_form2">
+                    <form id="rcc_form" novalidate data-ng-init="main.$cookie=('consent' | getCookie);" data-ng-submit="main.isSubmit=true; main.$cookie=('consent' | getCookie);" name="cookieForm" class="card-section cookie-form" rc-cookie="consent" rc-cookie-fields="main.$cookieFields" rc-cookie-days="2">
                         <div class="callout alert" data-ng-if="cookieForm.$invalid && main.isSubmit">
                             <span>Check required fields</span>
                             <button class="close-button" aria-label="Dismiss alert" type="button" data-ng-click="main.isSubmit=false;">
