add default status

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </script>
     <script>
         window.addEventListener("load", function() {
-            window.rcc.initialise({formId: 'rcc_form', cookie: {name: 'consent'}});
+            window.rcc.initialise({formId: 'rcc_form', cookie: {name: 'consent'}, defaultStatus: {required: true}});
         });
     </script>
 
