--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         window.addEventListener("load", function() {
             window.rcc.addProvider({
                 id: 'ga',
-                trackingId: 'UA-XXXXX-Y',
+                trackingId: 'UA-128378883-1',
                 anonymizeIp: true,
                 load: function() {
                     if (typeof ga !== 'undefined') { return false; }
